<resources>
    <string name="app_name">YueZhan</string>

    <string name="snack_message_main_gather">start to gather</string>
    <string name="snack_message_not_notify">not new data</string>
    <string name="snack_message_login_success">login success</string>
    <string name="snack_message_net_error">network error please to check network</string>
    <string name="snack_message_timeout_error">time out please to check network</string>
    <string name="snack_message_password_error">This password is incorrect</string>
    <string name="snack_message_unknown_error">unknown error</string>
    <string name="snack_message_data_error">data error</string>
    <string name="snack_action_to_setting">Setting</string>

    <!--login-->
    <string name="login">登陆</string>
    <string name="login_input_phone">请输入手机号码</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_show_password">显示密码</string>
    <string name="login_hint_password">隐藏密码</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="regedit">注册用户</string>
    <string name="error_invalid_phone">无效的手机号码</string>
    <string name="error_invalid_password">密码太短，不少于4位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_phone_required">请输入手机号码</string>
    <string name="error_password_required">请输入4位以上密码</string>

    <!--重置密码-->
    <string name="reset_title">重置密码</string>
    <string name="telephone">手机号</string>
    <string name="hint_phone">请输入号码</string>
    <string name="captcha">验证码</string>
    <string name="get_captcha">获取验证码</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="new_password">新密码</string>
    <string name="input_newpassword">请输入新密码</string>
    <string name="input_confirmpassword">请确认新密码</string>
    <string name="error_notconfirm">两次输入密码不一致</string>
    <string name="error_captcha">验证码错误</string>
    <string name="send_captcha_success">发送验证码成功！</string>
    <string name="send_captcha_failed">发送验证码失败！</string>
    <string name="input_new_password">6到12位数字或字母</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_confirm_password">6到12位数字或字母</string>
    <string name="sms_message">您的校验码是：%d。为了保证您的账号安全，请勿向任何人泄露。</string>
    <string name="edit_password_success">密码修改成功，请重新登录！</string>
    <string name="edit_password_failed">密码修改失败！</string>
    <string name="confirm_and_save">确认并保存</string>

    <!--注册-->
    <string name="regedit_title1">离完成注册还需要一步</string>
    <string name="regedit_title2">离完成注册还需要二步</string>
    <string name="regedit_title3">离完成注册还需要三步</string>
    <string name="nextstep">下一步请点我</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="estate">小区</string>
    <string name="building">楼幢</string>
    <string name="cell">单元</string>
    <string name="house">住户</string>


    <array name="country">
        <item>a0</item>
        <item>a1</item>
        <item>a2</item>
        <item>a3</item>
        <item>a4</item>
        <item>a5</item>
        <item>b6</item>
        <item>b7</item>
        <item>c8</item>
        <item>c9</item>
        <item>d10</item>
        <item>d11</item>
        <item>d12</item>
        <item>d13</item>
        <item>e14</item>
        <item>e15</item>
        <item>e16</item>
        <item>e17</item>
        <item>f18</item>
        <item>f19</item>
        <item>f20</item>
        <item>f21</item>
        <item>f22</item>
        <item>f23</item>
        <item>f24</item>
        <item>f25</item>
        <item>f26</item>

    </array>
</resources>
