<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.skuo.yuezhan.Module.Login.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo2" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/logo"
        android:inputType="phone"
        android:drawableLeft="@drawable/login_phone"
        android:background="@drawable/edit_bg"
        android:textSize="@dimen/normal_text_size"
        android:hint="@string/login_input_phone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/Phone"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:drawableLeft="@drawable/login_key"
        android:background="@drawable/edit_bg"
        android:textSize="@dimen/normal_text_size"
        android:hint="@string/login_input_password" />


    <TextView
        android:id="@+id/forgetpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/password"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/purple"
        android:text="@string/login_forget_password"/>

    <TextView
        android:id="@+id/showpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/password"
        android:layout_alignRight="@+id/password"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/purple"
        android:text="@string/login_show_password"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_style_blue"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/login_button_margin_top"
        android:layout_below="@+id/password"
        android:text="@string/login"/>

    <Button
        android:id="@+id/btnRegedit"
        android:layout_width="@dimen/regedit_button_width"
        android:layout_height="@dimen/regedit_button_height"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_style_white"
        android:textColor="@color/purple"
        android:layout_marginBottom="@dimen/regedit_button_margin_bottom"
        android:layout_alignParentBottom="true"
        android:text="@string/regedit"/>

    <ProgressBar
        android:id="@+id/progress_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        tools:visibility="visible" />
</RelativeLayout>
