<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Module.Login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightblue"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="@string/reset_title"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size" />
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:gravity="left"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".Module.Login.ResetPasswordActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/reset_margin_left"
                    android:text="@string/telephone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/telphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/reset_margin_left"
                    android:layout_marginRight="@dimen/reset_margin_right"
                    android:background="@null"
                    android:singleLine="true"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:hint="@string/hint_phone"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/reset_margin_left"
                    android:text="@string/captcha"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/captcha"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/reset_margin_left"
                    android:layout_marginRight="@dimen/reset_margin_right"
                    android:background="@null"
                    android:singleLine="true"
                    android:inputType="number"
                    android:hint="@string/input_captcha"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/normal_text_size" />

                <Button
                    android:id="@+id/btnCaptcha"
                    android:layout_width="120dp"
                    android:layout_height="@dimen/regedit_button_height"
                    android:background="@drawable/btn_style_blue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small_text_size"
                    android:text="@string/get_captcha"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/reset_margin_left"
                    android:text="@string/new_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/reset_margin_left"
                    android:layout_marginRight="@dimen/reset_margin_right"
                    android:background="@null"
                    android:singleLine="true"
                    android:maxLength="12"
                    android:inputType="numberPassword"
                    android:hint="@string/input_new_password"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/reset_margin_left"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/reset_margin_left"
                    android:layout_marginRight="@dimen/reset_margin_right"
                    android:background="@null"
                    android:singleLine="true"
                    android:maxLength="12"
                    android:hint="@string/input_confirm_password"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/normal_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/gray" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginTop="@dimen/above_button"
            android:background="@drawable/btn_style_blue"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/confirm_and_save"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
